[package]
name = "windows-screenshot-renamer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
dirs-next = "2.0.0"
env_logger = "0.11.9"
lazy-regex = "3.6.0"
log = "0.4.29"
notify = "8.2.0"
tray-icon = "0.21"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]
